docs: polish project presentation materials